--- a/style.css
+++ b/style.css
@@ -21,6 +21,15 @@ input{
     height: 1500px;
     background-color: #f2f4f7;
 }
+.pjs-main-block{
+    padding-left: 5px;
+    padding-right: 5px;
+}
+.pjs-main-block > div{
+    margin-top:10px;
+    border: 1px solid #dee3eb;
+    background-color: white;
+}
 .pjs-naver-font{
     color:#03cf5d;
 }
@@ -50,7 +59,7 @@ input{
     height:17%;
 }
 .pjs-naver-interesting{
-    height:64%;
+    height:60%;
 }
 .pjs-naver-advertise-bottom{
     height: 8%;
@@ -65,7 +74,7 @@ input{
     height: 10%;
 }
 .pjs-naver-shopping{
-    height: 64%;
+    height: 60%;
 }
 .pjs-naver-advertise-bottom-small{
     height: 8%;
