--- a/web-mobile-publishing/ssafy_landing/css/style_comp.css
+++ b/web-mobile-publishing/ssafy_landing/css/style_comp.css
@@ -211,7 +211,7 @@ button:focus {
 }
 
 .section-1-background {
-  /*background-image: url(../assets/img/section-1-bg-a.jpg);*/
+  background-image: url(../assets/img/bomi.jpg);
   background-color: blue;
   background-repeat: no-repeat;
   background-position: center;
